--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <Section>
+    <Section class="banner">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1>
