--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1>
-                <span class="orange">Hasan Shourav</span> World
+                <span class="orange">Peter Parker</span> World
             </h1>
             <h3>Bluilding Climber & Train Stopper</h3>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for
@@ -31,6 +31,20 @@
         <div class="half-width">
             <div><img src="images/SS1.png" alt=""></div>
     </Section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/SS3.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>
+                Become a web developer
+            </h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+        </div>
+
+    </section>
 </body>
 
 </html>
