--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" type="image/png" href="images/favicion.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hasan Portfolio</title>
+    <title>Spidy Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="background">
     <Section class="banner">
         <div class="half-width">
             <h1>Welcome To</h1>
@@ -25,15 +26,15 @@
                 work. That's why I am learning and mastering web development. I will not stop until I become the
                 Web
                 Development Hero.</p>
-            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/hasan-shourav-0094421a0/">HIRE
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/showcase/spiderman/about/">HIRE
                 ME</a>
         </div>
         <div class="half-width">
-            <div><img src="images/SS1.png" alt=""></div>
+            <div><img src="images/my-bg.png" alt=""></div>
     </Section>
     <section class="dream-big">
         <div class="half-width">
-            <img src="images/SS3.png" alt="">
+            <img src="images/my-bg2 (1).png" alt="">
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
@@ -42,6 +43,7 @@
             </h2>
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
                 to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" href="">MY RESUME</a>
         </div>
 
     </section>
